--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@radix-ui/react-label": "^2.0.1",
         "autoprefixer": "^10.4.14",
+        "class-variance-authority": "^0.5.2",
+        "clsx": "^1.2.1",
         "jotai": "^2.0.4",
+        "lucide-react": "^0.161.0",
         "next": "^13.3.0",
         "postcss": "^8.4.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
+        "tailwind-merge": "^1.12.0",
         "tailwindcss": "^3.3.1",
+        "tailwindcss-animate": "^1.0.5",
         "zustand": "^4.3.7"
     },
     "devDependencies": {
