--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "@radix-ui/react-label": "^2.0.1",
+        "@radix-ui/react-toast": "^1.1.3",
         "autoprefixer": "^10.4.14",
         "class-variance-authority": "^0.5.2",
         "clsx": "^1.2.1",
