--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@radix-ui/react-label": "^2.0.1",
         "@radix-ui/react-toast": "^1.1.3",
+        "@radix-ui/react-tooltip": "^1.0.5",
         "autoprefixer": "^10.4.14",
         "class-variance-authority": "^0.5.2",
         "clsx": "^1.2.1",
